add http server section